[gd_scene load_steps=12 format=3 uid="uid://cv1forg6fgac0"]

[ext_resource type="Texture2D" uid="uid://dkb307o20nysh" path="res://assets/Godmather/атакует1.png" id="1_28731"]
[ext_resource type="Script" path="res://scripts/godmother.gd" id="1_tkg6q"]
[ext_resource type="Texture2D" uid="uid://s4twm1t66wky" path="res://assets/Godmather/атакует2.png" id="2_vaj5k"]
[ext_resource type="Texture2D" uid="uid://cw6s7x86mfdug" path="res://assets/Godmather/покой1.png" id="3_opp2h"]
[ext_resource type="Texture2D" uid="uid://cae2iu03fpa54" path="res://assets/Godmather/покой2.png" id="4_5vg7k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1lhw"]
size = Vector2(28, 66)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8ysm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_28731")
}, {
"duration": 1.0,
"texture": ExtResource("2_vaj5k")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_opp2h")
}, {
"duration": 1.0,
"texture": ExtResource("4_5vg7k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tpaud"]
radius = 495.016

[sub_resource type="CircleShape2D" id="CircleShape2D_qsbxf"]
radius = 269.119

[sub_resource type="Animation" id="Animation_dp4no"]
resource_name = "damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jv274"]
_data = {
"damage": SubResource("Animation_dp4no")
}

[node name="Godmother" type="CharacterBody2D" groups=["can_take_damage"]]
script = ExtResource("1_tkg6q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_r1lhw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.03, 0.03)
sprite_frames = SubResource("SpriteFrames_p8ysm")
animation = &"idle"

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_tpaud")

[node name="PlayerDetector2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector2"]
shape = SubResource("CircleShape2D_qsbxf")
debug_color = Color(0.964706, 0, 0.498039, 0.419608)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(28, -11)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jv274")
}

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="PlayerDetector2" to="." method="_on_player_detector_2_body_entered"]
[connection signal="body_exited" from="PlayerDetector2" to="." method="_on_player_detector_2_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
